Completed and passed all tests for addition!!!!